Desenvolvimento da API de listagem de ferragens
Related Work Items: #1305

--- a/Api/Glass.API.Backend/Glass.API.Backend.csproj
+++ b/Api/Glass.API.Backend/Glass.API.Backend.csproj
@@ -216,6 +216,12 @@
     <Compile Include="Controllers\Clientes\V1\Tipos\GetTiposClienteController.cs" />
     <Compile Include="Controllers\Clientes\V1\Tipos\PatchTiposClienteController.cs" />
     <Compile Include="Controllers\Clientes\V1\Tipos\PostTiposClienteController.cs" />
+    <Compile Include="Controllers\Projetos\V1\Ferragens\DeleteFerragensController.cs" />
+    <Compile Include="Controllers\Projetos\V1\Ferragens\FabricantesFerragem\FabricantesFerragemController.cs" />
+    <Compile Include="Controllers\Projetos\V1\Ferragens\FabricantesFerragem\GetFabricantesFerragensController.cs" />
+    <Compile Include="Controllers\Projetos\V1\Ferragens\GetFerragensController.cs" />
+    <Compile Include="Controllers\Projetos\V1\Ferragens\PatchFerragensController.cs" />
+    <Compile Include="Controllers\Projetos\V1\Ferragens\FerragensController.cs" />
     <Compile Include="Controllers\Projetos\V1\GruposMedidaProjeto\GetGruposMedidaProjetoController.cs" />
     <Compile Include="Controllers\Projetos\V1\GruposMedidaProjeto\GruposMedidaProjetoController.cs" />
     <Compile Include="Controllers\Projetos\V1\MedidasProjeto\DeleteMedidasProjetoController.cs" />
@@ -448,6 +454,7 @@
     <Compile Include="Helper\Clientes\Tipos\TraducaoOrdenacaoListaTipos.cs" />
     <Compile Include="Helper\Projetos\MedidasProjeto\ConverterCadastroAtualizacaoParaMedidaProjeto.cs" />
     <Compile Include="Helper\Projetos\MedidasProjeto\TraducaoOrdenacaoListaMedidasProjeto.cs" />
+    <Compile Include="Helper\Projetos\Ferragens\TraducaoOrdenacaoListaFerragens.cs" />
     <Compile Include="Helper\Projetos\ModelosProjeto\TraducaoOrdenacaoListaModelosProjeto.cs" />
     <Compile Include="Helper\Projetos\TraducaoOrdenacaoListaProjetos.cs" />
     <Compile Include="Helper\Datas\Feriados\ConverterCadastroAtualizacaoParaFeriado.cs" />
@@ -597,6 +604,7 @@
     <Compile Include="Models\Producao\V1\Setores\Lista\ListaDto.cs" />
     <Compile Include="Models\Producao\V1\Roteiros\Lista\FiltroDto.cs" />
     <Compile Include="Models\Producao\V1\Roteiros\Lista\ListaDto.cs" />
+    <Compile Include="Models\Projetos\V1\Ferragens\Configuracoes\ListaDto.cs" />
     <Compile Include="Models\Projetos\V1\MedidasProjeto\CadastroAtualizacao\CadastroAtualizacaoDto.cs" />
     <Compile Include="Models\Projetos\V1\MedidasProjeto\Lista\FiltroDto.cs" />
     <Compile Include="Models\Projetos\V1\MedidasProjeto\Lista\ListaDto.cs" />
@@ -605,6 +613,9 @@
     <Compile Include="Models\Projetos\V1\Lista\FiltroDto.cs" />
     <Compile Include="Models\Projetos\V1\Lista\ListaDto.cs" />
     <Compile Include="Models\Projetos\V1\Lista\PermissoesDto.cs" />
+    <Compile Include="Models\Projetos\V1\Ferragens\Lista\FiltroDto.cs" />
+    <Compile Include="Models\Projetos\V1\Ferragens\Lista\ListaDto.cs" />
+    <Compile Include="Models\Projetos\V1\Ferragens\Lista\PermissoesDto.cs" />
     <Compile Include="Models\Projetos\V1\ModelosProjeto\Lista\FiltroDto.cs" />
     <Compile Include="Models\Projetos\V1\ModelosProjeto\Lista\ListaDto.cs" />
     <Compile Include="Models\Projetos\V1\ModelosProjeto\Lista\PermissoesDto.cs" />
