#84018 - Correção do codereview

--- a/Integracao/Glass.Integracao.Khan/Glass.Integracao.Khan.csproj
+++ b/Integracao/Glass.Integracao.Khan/Glass.Integracao.Khan.csproj
@@ -94,6 +94,7 @@
   <ItemGroup>
     <Compile Include="ConfiguracaoKhan.cs" />
     <Compile Include="ConversorNotaFiscalPedido.cs" />
+    <Compile Include="EsquemaHistoricoKhan.cs" />
     <Compile Include="HistoricoKhan.cs" />
     <Compile Include="IntegradorKhan.cs" />
     <Compile Include="IntegradorScheculerRegistry.cs" />
