--- a/Glass/Mef.config
+++ b/Glass/Mef.config
@@ -625,5 +625,12 @@
       </exports>
     </part>
 
+    <part type="Glass.Fiscal.Negocios.Componentes.IestUfLojaFluxo, Glass.Negocios.Componentes" partCreationPolicy="NonShared">
+      <importingConstructor useFirst="true" />
+      <exports>
+        <export contractType="Glass.Fiscal.Negocios.IIestUfLojaFluxo, Glass.Negocios" />
+      </exports>
+    </part>
+
   </parts>
 </mef.configuration>
