#85241 -  Implementação do serviço para confirmar a integração da Nota Fiscal e a consulta do limite de crédito do cliente
Related Work Items: #1729

--- a/Api/Glass.API.Backend/Mef.config
+++ b/Api/Glass.API.Backend/Mef.config
@@ -601,6 +601,7 @@
       <importingConstructor useFirst="true" />
       <exports>
         <export contractType="Glass.Integracao.IIntegrador, Glass.Integracao" />
+        <export contractType="Glass.Integracao.Khan.IIntegradorKhan, Glass.Integracao.Khan" />
       </exports>
     </part>
 
@@ -610,6 +611,14 @@
         <export contractType="Glass.Integracao.Historico.IProvedorHistorico, Glass.Integracao" />
       </exports>
     </part>
+
+    <part type="Glass.Integracao.Khan.ProvedorLimiteCredito, Glass.Integracao.Khan" partCreationPolicy="Shared">
+      <importingConstructor useFirst="true" />
+      <exports>
+        <export contractType="Glass.Data.IProvedorLimiteCredito, Glass.Data" />
+      </exports>
+    </part>
+
 
   </parts>
 </mef.configuration>
