--- a/Glass/Mef.config
+++ b/Glass/Mef.config
@@ -622,6 +622,7 @@
       <importingConstructor useFirst="true" />
       <exports>
         <export contractType="Glass.Integracao.IIntegrador, Glass.Integracao" />
+        <export contractType="Glass.Integracao.Khan.IIntegradorKhan, Glass.Integracao.Khan" />
       </exports>
     </part>
 
@@ -632,5 +633,11 @@
       </exports>
     </part>
 
+    <part type="Glass.Integracao.Khan.ProvedorLimiteCredito, Glass.Integracao.Khan" partCreationPolicy="Shared">
+      <importingConstructor useFirst="true" />
+      <exports>
+        <export contractType="Glass.Data.IProvedorLimiteCredito, Glass.Data" />
+      </exports>
+    </part>
   </parts>
 </mef.configuration>
