--- a/Integracao/Glass.Integracao.Khan/Glass.Integracao.Khan.csproj
+++ b/Integracao/Glass.Integracao.Khan/Glass.Integracao.Khan.csproj
@@ -21,6 +21,8 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <TreatWarningsAsErrors>true</TreatWarningsAsErrors>
+    <DocumentationFile>bin\Debug\Glass.Integracao.Khan.XML</DocumentationFile>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -79,6 +81,10 @@
       <HintPath>..\..\packages\Colosoft.CommonServiceLocator.1.0.0\lib\net40\Microsoft.Practices.ServiceLocation.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="Sync.Fiscal.EFD, Version=1.0.0.0, Culture=neutral, processorArchitecture=MSIL">
+      <SpecificVersion>False</SpecificVersion>
+      <HintPath>..\..\Dlls\Sync.Fiscal.EFD.dll</HintPath>
+    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
@@ -96,16 +102,33 @@
     <Compile Include="ConversorNotaFiscalPedido.cs" />
     <Compile Include="EsquemaHistoricoKhan.cs" />
     <Compile Include="HistoricoKhan.cs" />
+    <Compile Include="IIntegradorKhan.cs" />
     <Compile Include="IntegradorKhan.cs" />
     <Compile Include="IntegradorScheculerRegistry.cs" />
+    <Compile Include="Jobs\MonitorCondicoesPagamentoJob.cs" />
     <Compile Include="Jobs\MonitorIndicadoresFinanceirosJob.cs" />
+    <Compile Include="Jobs\MonitorNotaFiscalJob.cs" />
+    <Compile Include="Jobs\SinronizadorTodosProdutosJob.cs" />
+    <Compile Include="KhanException.cs" />
+    <Compile Include="MonitorCondicoesPagamento.cs" />
     <Compile Include="MonitorIndicadoresFinanceiros.cs" />
     <Compile Include="MonitorNotaFiscal.cs" />
     <Compile Include="MonitorProdutos.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ProvedorLimiteCredito.cs" />
     <Compile Include="Seguranca\KhanClientMessageInspector.cs" />
     <Compile Include="Seguranca\KhanEndpointBehavior.cs" />
+    <Compile Include="Service References\KhanConsultasServiceReference\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
     <Compile Include="Service References\KhanIndicadoresServiceReference\Reference.cs">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </Compile>
+    <Compile Include="Service References\KhanParceirosServiceReference\Reference.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Reference.svcmap</DependentUpon>
@@ -124,6 +147,22 @@
   <ItemGroup>
     <None Include="app.config" />
     <None Include="packages.config" />
+    <None Include="Service References\KhanConsultasServiceReference\ConsultasService.wsdl" />
+    <None Include="Service References\KhanConsultasServiceReference\ConsultasService.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\KhanConsultasServiceReference\ConsultasService1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\KhanConsultasServiceReference\ConsultasService2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\KhanConsultasServiceReference\ConsultasService3.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\KhanConsultasServiceReference\Glass.Integracao.Khan.KhanConsultasServiceReference.PedidoStatus.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
     <None Include="Service References\KhanIndicadoresServiceReference\Glass.Integracao.Khan.KhanIndicadoresServiceReference.Indicadores.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
@@ -137,17 +176,36 @@
     <None Include="Service References\KhanIndicadoresServiceReference\IndicadoresService2.xsd">
       <SubType>Designer</SubType>
     </None>
+    <None Include="Service References\KhanParceirosServiceReference\Glass.Integracao.Khan.KhanParceirosServiceReference.Parceiros.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
+    <None Include="Service References\KhanParceirosServiceReference\ParceirosLimiteService.wsdl" />
+    <None Include="Service References\KhanParceirosServiceReference\ParceirosService.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\KhanParceirosServiceReference\ParceirosService1.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\KhanParceirosServiceReference\ParceirosService2.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\KhanParceirosServiceReference\ParceirosService3.xsd">
+      <SubType>Designer</SubType>
+    </None>
+    <None Include="Service References\KhanPedidoServiceReference\Glass.Integracao.Khan.KhanPedidoServiceReference.CondicaoPagtos.datasource">
+      <DependentUpon>Reference.svcmap</DependentUpon>
+    </None>
     <None Include="Service References\KhanPedidoServiceReference\Glass.Integracao.Khan.KhanPedidoServiceReference.Pedido.datasource">
       <DependentUpon>Reference.svcmap</DependentUpon>
     </None>
-    <None Include="Service References\KhanPedidoServiceReference\PedidoService.wsdl" />
-    <None Include="Service References\KhanPedidoServiceReference\PedidoService.xsd">
+    <None Include="Service References\KhanPedidoServiceReference\PedidoService1.wsdl" />
+    <None Include="Service References\KhanPedidoServiceReference\PedidoService3.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\KhanPedidoServiceReference\PedidoService1.xsd">
+    <None Include="Service References\KhanPedidoServiceReference\PedidoService31.xsd">
       <SubType>Designer</SubType>
     </None>
-    <None Include="Service References\KhanPedidoServiceReference\PedidoService2.xsd">
+    <None Include="Service References\KhanPedidoServiceReference\PedidoService32.xsd">
       <SubType>Designer</SubType>
     </None>
     <None Include="Service References\KhanProdutosServiceReference\Glass.Integracao.Khan.KhanProdutosServiceReference.Produtos.datasource">
@@ -198,7 +256,9 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <WCFMetadataStorage Include="Service References\KhanConsultasServiceReference\" />
     <WCFMetadataStorage Include="Service References\KhanIndicadoresServiceReference\" />
+    <WCFMetadataStorage Include="Service References\KhanParceirosServiceReference\" />
     <WCFMetadataStorage Include="Service References\KhanPedidoServiceReference\" />
     <WCFMetadataStorage Include="Service References\KhanProdutosServiceReference\" />
   </ItemGroup>
@@ -230,9 +290,6 @@
     </None>
   </ItemGroup>
   <ItemGroup>
-    <None Include="Service References\KhanPedidoServiceReference\PedidoService.disco" />
-  </ItemGroup>
-  <ItemGroup>
     <None Include="Service References\KhanPedidoServiceReference\configuration91.svcinfo" />
   </ItemGroup>
   <ItemGroup>
@@ -240,6 +297,36 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Service References\KhanPedidoServiceReference\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\KhanConsultasServiceReference\ConsultasService.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\KhanConsultasServiceReference\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\KhanConsultasServiceReference\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\KhanConsultasServiceReference\Reference.svcmap">
+      <Generator>WCF Proxy Generator</Generator>
+      <LastGenOutput>Reference.cs</LastGenOutput>
+    </None>
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\KhanPedidoServiceReference\PedidoService1.disco" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\KhanParceirosServiceReference\configuration91.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\KhanParceirosServiceReference\configuration.svcinfo" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="Service References\KhanParceirosServiceReference\Reference.svcmap">
       <Generator>WCF Proxy Generator</Generator>
       <LastGenOutput>Reference.cs</LastGenOutput>
     </None>
