--- a/Integracao/Glass.Integracao.Khan/app.config
+++ b/Integracao/Glass.Integracao.Khan/app.config
@@ -57,12 +57,9 @@
       <basicHttpBinding>
         <binding name="BasicHttpBinding_IProdutosService" />
         <binding name="BasicHttpBinding_IIndicadoresService" />
-        <binding name="BasicHttpBinding_IPedidoService">
-          <security mode="None">
-            <transport clientCredentialType="None" />
-            <message clientCredentialType="UserName" />
-          </security>
-        </binding>
+        <binding name="BasicHttpBinding_IPedidoService" />
+        <binding name="BasicHttpBinding_IConsultasService" />
+        <binding name="BasicHttpBinding_IParceirosService" />
       </basicHttpBinding>
     </bindings>
     <client>
@@ -73,9 +70,15 @@
       <endpoint address="http://www.ikhan.com.br/appskhan/knIntegrador/ProdutosService.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IProdutosService"
         contract="KhanProdutosServiceReference.IProdutosService" name="BasicHttpBinding_IProdutosService" />
-      <endpoint address="http://www.ikhan.com.br/appskhan/knIntegrador/PedidoService.svc"
+      <endpoint address="http://mercado.khan.com.br/appskhan/knIntegrador/ConsultasService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IConsultasService"
+        contract="KhanConsultasServiceReference.IConsultasService" name="BasicHttpBinding_IConsultasService" />
+      <endpoint address="http://mercado.khan.com.br/appskhan/knIntegrador/PedidoService.svc"
         binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IPedidoService"
         contract="KhanPedidoServiceReference.IPedidoService" name="BasicHttpBinding_IPedidoService" />
+      <endpoint address="http://mercado.khan.com.br/appskhan/knIntegrador/ParceirosService.svc"
+        binding="basicHttpBinding" bindingConfiguration="BasicHttpBinding_IParceirosService"
+        contract="KhanParceirosServiceReference.IParceirosService" name="BasicHttpBinding_IParceirosService" />
     </client>
   </system.serviceModel>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5.2" /></startup></configuration>
